Change the UI and log message

--- a/app/admin.html
+++ b/app/admin.html
@@ -108,7 +108,7 @@
                             <div class="col-md-2 col-xs-2"></div>
                         </div>
 
-                        <md-button ng-click="automaticTeamForm()" class="md-raised">Automatic Team Form</md-button>
+                        <md-button ng-click="automaticTeamForm()" class="md-raised">Automatic Team Forming</md-button>
 
                         <hr>
                         <div layout="row" layout-align="space-around">
