Add requests to fill places left for each team

--- a/app/admin.html
+++ b/app/admin.html
@@ -30,6 +30,7 @@
 
     <!-- Customized libraries shared by pages -->
     <script src="js/site.js"></script>
+    <script src="js/common.js"></script>
 </head>
 <body>
     <div ng-app="teamform-admin-app" ng-controller="AdminCtrl">
