--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -88,13 +88,13 @@
                                         <span>Filter</span>
                                     </div>
                                     <div class="col-sm-3">
-                                        <md-switch ng-model="filterPlacesSwitch" ng-change="filterTeams(filterPlacesSwitch, filterSkillsMatchSwitch)">Places left</md-switch>
+                                        <md-switch ng-model="filterPlacesSwitch" ng-change="filterTeams(filterPlacesSwitch, filterSkillsMatchSwitch, filterMissingSkillsMatchSwitch)">Places left</md-switch>
                                     </div>
                                     <div class="col-sm-3">
-                                        <md-switch ng-model="$parent.filterSkillsMatchSwitch" ng-change="filterTeams(filterPlacesSwitch, filterSkillsMatchSwitch)" ng-if="user">Match my skills</md-switch>
+                                        <md-switch ng-model="$parent.filterSkillsMatchSwitch" ng-change="filterTeams(filterPlacesSwitch, filterSkillsMatchSwitch, filterMissingSkillsMatchSwitch)" ng-if="user">Match my skills</md-switch>
                                     </div>
                                     <div class="col-sm-3">
-                                        <md-switch ng-model="$parent.filterMissingSkillsMatchSwitch" ng-change="filterTeams(filterPlacesSwitch, filterMissingSkillsMatchSwitch)" ng-if="user">Match missing skills</md-switch>
+                                        <md-switch ng-model="$parent.filterMissingSkillsMatchSwitch" ng-change="filterTeams(filterPlacesSwitch, filterSkillsMatchSwitch, filterMissingSkillsMatchSwitch)" ng-if="user">Match missing skills</md-switch>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -108,7 +108,7 @@
                                         <md-switch ng-model="$parent.sortSkillsMatchSwitch" ng-change="sortTeams('skillsMatch')" ng-if="user">Match my skills</md-switch>
                                     </div>
                                     <div class="col-sm-3">
-                                        <md-switch ng-model="$parent.sortMissingSkillsMatchSwitch" ng-change="sortTeams('missingskillsMatch')" ng-if="user">Match missing skills</md-switch>
+                                        <md-switch ng-model="$parent.sortMissingSkillsMatchSwitch" ng-change="sortTeams('missingSkillsMatch')" ng-if="user">Match missing skills</md-switch>
                                     </div>
                                 </div>
                             </form>
