--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -135,6 +135,12 @@
                     <md-button ng-click="createTeam($event)" class="md-fab" aria-label="create team"><i class="material-icons">create</i></md-button>
                 </md-content>
             </main>
+
+            <!-- toast -->
+            <div aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
+                <div class="mdl-snackbar__text"></div>
+                <button type="button" class="mdl-snackbar__action"></button>
+            </div>
         </div>
     </div>
 
