--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,12 @@
                     </div>
                 </md-content>
             </main>
+
+            <!-- toast -->
+            <div aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
+                <div class="mdl-snackbar__text"></div>
+                <button type="button" class="mdl-snackbar__action"></button>
+            </div>
         </div>
     </div>
 
