--- a/app/user.html
+++ b/app/user.html
@@ -72,7 +72,7 @@
                                     <h2>{{user.email}}</h2>
                                     <div class="row">
                                         <div class="col-sm-4">
-                                            <span>Skills:</span>
+                                            <strong>Skills:</strong>
                                             <ul>
                                                 <li ng-repeat="skill in skills">{{skill.$value}}</li>
                                             </ul>
